Back is visible: no overflow, causing issues

--- a/thelexicon-tst.css
+++ b/thelexicon-tst.css
@@ -405,8 +405,6 @@
     padding: 0 40px 80px 40px;
     display: flex;
     flex: 1;
-    overflow-y: auto;
-    overflow-x: hidden;
     flex-direction: column;
     -webkit-overflow-scrolling: touch;
 }
